[tool.poetry]
name = "fraud-detection"
version = "0.1.0"
description = "Credit card fraud detection MLOps pipeline on EC2-only"
authors = ["Manish Sahu"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
imbalanced-learn = "^0.12.3"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
mlflow = "^2.12.1"
fastapi = "^0.111.0"
uvicorn = {version="^0.30.0", extras=["standard"]}
pydantic = "^2.7.3"
python-multipart = "^0.0.9"
requests = "^2.32.3"
joblib = "^1.4.2"
prometheus-fastapi-instrumentator = "^6.1.0"
psutil = "^5.9.8"
dvc = "^3.51.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-q"
